--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,36 @@
 !/app/assets/builds/.keep
 
 /node_modules
+
+# Обычно *.yml файлы в папке config/ содержат настройки
+# приложения, специфичные для каждой машины.
+# Например, пароли и другие данные для доступа
+# к БД или различным API. По соображениям удобства, а также по
+# соображениям безопасности, эти файлы не должны быть
+# добавлены в репозиторий.
+config/*.yml
+# В эту папку будут компилироваться все asset-ы (обычно в production-среде)
+public/assets/
+# Файл, который обычно создается только в production-среде
+76# Файл, который обычно создается только в production-среде
+# на сервере. Говорит nginx-у, что ваше приложение на данный
+# момент не работает и показывает пользователям временную
+# страницу с сообщением о неисправности
+# (сама страница содержится в этом файле).
+public/maintenance.html
+# В эту папку пользователи загружают изображения
+# (если так настроить приложение, конечно).
+# На локальной машине в роли пользователя выступаете
+# только вы, на сервере - все посетители вашего сайта.
+# Следовательно, содержимое этих папок должно отличаться. Поэтому
+git должен их игнорировать.
+!public/images/
+public/images/*
+public/images/**/* # выражение /**/* означает все файлы в поддиректориях
+.DS_Store
+# Системный файл MacOSX, мешается под ногами.
+# Пустая папка, в которой нет ничего, кроме этого
+# файла будет все равно добавлена в git-репозиторий.
+# Полезный файл, не будем его игнорировать
+# (следовательно, восклицательный знак в начале).
+!.gitkeep
