dotenv for env.variables

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ public/images/**/* # выражение /**/* означает все файлы
 # Полезный файл, не будем его игнорировать
 # (следовательно, восклицательный знак в начале).
 !.gitkeep
+/.env
